# Job-Scrapper

./: .replit  README.md  main.py  pyproject.toml  scrap_indeed.py  scrap_so.py  scrapper.py
templates/: index.html  report.html
